# aelus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  pytest.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  quality.yml
src/aelus/: __init__.py  main.py
src/aelus/api/: __init__.py  app.py  dependencies.py
src/aelus/api/middleware/: rate_limit.py
src/aelus/api/routes/: health.py
src/aelus/core/: __init__.py  config.py
src/aelus/parsers/: __init__.py  base.py  custom.py  third_party.py
src/aelus/utils/: __init__.py  exceptions.py  file_io.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_data.py
tests/integration/: test_api_flow.py  test_parser_integration.py  test_rate_limiting.py
tests/unit/api/: test_app.py  test_health.py  test_middleware.py
tests/unit/parsers/: __init__.py  test_base.py  test_custom.py  test_factory.py
tests/unit/utils/: test_file_io.py
