[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aelus"
dynamic = ["version"]
authors = [
    { name = "Amir Masri", email = "masriamir@users.noreply.github.com" },
]
description = "Web-based dashboard for viewing and organizing Ableton Live project files."
keywords = [
    "Ableton",
    "Ableton Live",
    "als",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "defusedxml>=0.7.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/masriamir/aelus"
Repository = "https://github.com/masriamir/aelus"
Issues = "https://github.com/masriamir/aelus/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.5,<1.0.0",  # Linting and formatting
    "mypy>=1.18.2,<2.0.0",  # Type checking
    "types-aiofiles>=24.1.0",  # Type stubs for aiofiles
]

test = [
    "pytest>=8.2.0,<9.0.0",  # Testing framework
    "pytest-cov>=6.0.0,<7.0.0",  # Coverage reporting
    "pytest-watch>=4.2.0,<5.0.0",  # Watch mode for tests
    "pytest-asyncio>=0.25.0,<1.0.0",  # Async test support
    "httpx>=0.27.0,<1.0.0",  # Async HTTP client for testing
]

quality = [
    "pre-commit>=4.0.0,<5.0.0",  # Pre-commit hooks
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    #"ANN",  # flake8-annotations
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    #"DTZ",  # flake8-datetimez
    #"INT",  # flake8-gettext
    #"ISC",  # flake8-implicit-str-concat
    #"ICN",  # flake8-import-conventions
    #"LOG",  # flake8-logging
    #"G",  # flake8-logging-format
    "T20",  # flake8-print
    #"PYI",  # flake8-pyi
    #"PT",  # flake8-pytest-style
    #"Q",  # flake8-quotes
    #"RET",  # flake8-return
    #"SLF",  # flake8-self
    #"SIM",  # flake8-simplify
    #"TC",  # flake8-type-checking
    #"ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "I",  # isort
    "C90",  # mccabe
    "N",  # pep8-naming
    "E",  # pycodestyle-error
    "W",  # pycodestyle-warning
    #"DOC",  # pydoclint
    #"D",  # pydocstyle
    "F",  # Pyflakes
    "PL",  # Pylint
    "UP",  # pyupgrade
    "RUF"  # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long
    "COM812",  # Missing trailing comma
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert statements
    "PLR2004",  # Magic value comparisons in tests
    "PLC0415",  # Import not at top level (common in tests)
]
"src/aelus/_version.py" = [
    "RUF022",  # __all__ sorting (auto-generated file)
    "UP035",  # Deprecated typing (auto-generated)
    "I001",  # Import sorting (auto-generated)
    "UP006",  # Use tuple (auto-generated)
    "UP007",  # Use X | Y (auto-generated)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests that do not require external dependencies",
    "integration: Integration tests that test multiple components together",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } }
]
required-version = ">=0.9.9,<1.0.0"

[tool.uv.pip]
python-version = "3.13"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/aelus/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aelus"]
